## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added absolute addresses to High level assembler output to aid in debugging of complex assembly programs

** Changed

** Fixed
Made Web debugger provide more useful information
Fixed regression in web debugger's ability to read input files

** Removed

* 0.0.5 - 2017-05-06
** Added
Added write to lisp
Added Cell Compactor to Lisp garbage collector resulting with multiple performance improvements
Added bootstrapping steps documentation
Added ability to specify amount of Available RAM on a Per run basis, however 16KB is the default

** Changed
Correct lisp High level prototype to include line comments
Changed default RAM to 16KB
Updated bootstrap documentation to match the memory requirements of the individual steps

** Fixed
Fixed missing traces when memory outside of world are accessed when profiling
Imported improved High Level Lisp Prototype
Updated bootstrap documentation to reflect change in Lisp sha256sum caused by recent performance upgrade

** Removed

* 0.0.4 - 2017-02-18
** Added
+ Added missing primitives from High level prototype to lisp implementation
+ Improved Eval's debugging messages

** Changed
+ Readline function no longer displays EOF Char should the user terminate input with Ctrl-d

** Fixed
+ Corrected Eval's processing of ASCII type
+ Make IF statements behave correctly
+ Enabled support for negative numbers
+ Properly display Integer Cells with the value of ZERO

** Removed
+ Removed Eval's default behavior of unknown input

* 0.0.3 - 2017-02-17
** Added
+ Added a primitive Lisp implementation in assembly
+ Gave primitive Lisp an exact garbage collector for CELLs (aka everything but strings)